--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="family">Family</string>
     <string name="classmate">Class Mate</string>
     <string name="submit_button">Submit</string>
+    <string name="call_button">Call</string>
 </resources>
