--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,11 @@
     <string name="classmate">Class Mate</string>
     <string name="submit_button">Submit</string>
     <string name="call_button">Call</string>
+
+    <string-array name="category_array">
+        <item>All</item>
+        <item>Friends</item>
+        <item>Family</item>
+        <item>Classmate</item>
+    </string-array>
 </resources>
